--- a/app/views/bets/index.html.erb
+++ b/app/views/bets/index.html.erb
@@ -1,20 +1,20 @@
 <div class="row">
   <% @bets.each do |bet| %>
-  <% if bet.pool.end_date >= DateTime.now %>
+  <% if bet.selection.pool.end_date >= DateTime.now %>
    <div class="col-xs-12 col-sm-4">
   <div class="card">
-      <div class="card-description">
+      <div class="card-description ">
         <%= link_to "", bet_path(bet), class: 'card-link' %>
 
-        <h3 class="text-center"><%= bet.pool.title %> </h3>
+        <h3 class="text-center bettititlell"><%= bet.selection.pool.title %> <h3>
         <ul class="list-unstyled list-inline">
           <li><%=image_tag "group.png", class: "card-icon"%> <%= @bets.where(pool_id: bet.pool_id).count %></li>
-          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.pool.stake %></li>
+          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.selection.pool.stake %></li>
 
         </ul>
         <hr>
         <div class="text-center">
-          <p><%= bet.pool.description %></p>
+          <p><%= bet.selection.pool.description %></p>
         </div>
       </div>
     </div>
@@ -24,18 +24,18 @@
 
   <div class="col-xs-12 col-sm-4">
   <div class="winning_selectionbet">
-      <div class="card-description">
+      <div class="bettititlell">
         <%= link_to "", bet_path(bet), class: 'card-link' %>
 
-        <h3 class="text-center"><%= bet.pool.title %> </h3>
+        <h3 class="text-center "><%= bet.selection.pool.title %> </h3>
         <ul class="list-unstyled list-inline">
           <li><%=image_tag "group.png", class: "card-icon"%> <%= @bets.where(pool_id: bet.pool_id).count %></li>
-          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.pool.stake %></li>
+          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.selection.pool.stake %></li>
 
         </ul>
         <hr>
         <div class="text-center">
-          <p><%= bet.pool.description %></p>
+          <p><%= bet.selection.pool.description %></p>
         </div>
       </div>
     </div>
@@ -46,15 +46,15 @@
       <div class="card-description">
         <%= link_to "", bet_path(bet), class: 'card-link' %>
 
-        <h3 class="text-center"><%= bet.pool.title %> </h3>
+        <h3 class="text-center"><%= bet.selection.pool.title %> </h3>
         <ul class="list-unstyled list-inline">
           <li><%=image_tag "group.png", class: "card-icon"%> <%= @bets.where(pool_id: bet.pool_id).count %></li>
-          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.pool.stake %></li>
+          <li><%=image_tag "Cash.png", class: "card-icon"%><%= bet.selection.pool.stake %></li>
 
         </ul>
         <hr>
         <div class="text-center">
-          <p><%= bet.pool.description %></p>
+          <p><%= bet.selection.pool.description %></p>
         </div>
       </div>
     </div>
