--- a/app/assets/stylesheets/pages/_betindex.scss
+++ b/app/assets/stylesheets/pages/_betindex.scss
@@ -20,3 +20,22 @@
   border-radius: 5px;
   box-shadow: 2px 2px 4px rgba(200,200,200,0.6);
 }
+.bettititlell{
+ color: $gray;
+  width: 100%;
+}
+.bettititlell h3{
+  color: #254C62;
+  font-size: 24px;
+  margin: 0px;
+  padding-bottom: 20px;
+}
+.bettititlell ul {
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bettititlell p {
+  font-size: 16px;
+}
