--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -38,6 +38,8 @@
    background-color: #D03538;
    color:white;
    border: solid #D03538 2px;
+   margin-top: 10px;
+
 }
 .sign-up:hover {
   background-color: #B10712;
