major user differences corrected.

--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -19,9 +19,9 @@
 
   </div>
     <%= render 'placebet', my_selection: @my_selection %>
-    <% if current_user == @pool.user %>
+   <!--  <%# if current_user == @pool.user %> -->
     <%= render 'confirm_winner' %>
-    <% end %>
+  <!--   <%# end %> -->
   </div>
 <%= render 'chatroom' %>
 
