--- a/app/assets/stylesheets/pages/_confirm_winner.scss
+++ b/app/assets/stylesheets/pages/_confirm_winner.scss
@@ -159,8 +159,21 @@ select:focus {
   padding: 1em;
 }
 
+
 .edit-winner {
+  color: $blue;
+}
+
+.edit-winner:hover{
+  opacity: 0.4;
+}
+
+
+.bottomright {
   position: absolute;
+  bottom: 15px;
+  right: 35px;
+  font-size: 18px;
 }
 
 
