--- a/app/views/pools/_confirm_winner.html.erb
+++ b/app/views/pools/_confirm_winner.html.erb
@@ -2,6 +2,8 @@
 <div class ="container">
   <div class ="wrapper">
     <div class="hiddeable">
+
+    <% if current_user == @pool.user %>
       <label class="wrapper" for="selections">Declare the Winner
       </label>
 
@@ -27,25 +29,25 @@
 
       </form>
     </div>
+    <% end %>
 
     <div class="container winner-output">
       <div class="output" id="winner">
-        <% if @winner %>
-        <%= @winner + " Wins!" %>
+        <% if @pool.selections.where(winning_selection: true).count > 0 %>
+          <h3><%= @winner.title + " Wins!" %></h3>
+        <% else %>
+        <h3> No Winner Yet... </h3>
         <% end %>
         <% if current_user == @pool.user %>
-        <div class = "edit-winner top">
+        <div class = "edit-winner bottomright">
         <i class='fa fa-wrench' id="admin-change-winner"></i>
         </div>
         <% end %>
       </div>
     </div>
 
-
-
   </div>
 </div>
-
 
 
 <%= content_for(:after_js) do %>
