--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-// @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-// $base-font: "Open Sans", "Helvetica", "sans-serif";
-// $header-font: "Raleway", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600|Fredoka+One:300,400");
+$base-font: "Open Sans", "Helvetica", "sans-serif";
+$header-font: "Fredoka One", "Helvetica", "sans-serif";
 
 // Font-size and line-height
 $base-size:          16px;
@@ -16,45 +16,45 @@ $font-weight-bold:   900;
 
 // Local fonts (uncomment following lines)
 
-@font-face {
-  font-family: "Odin Rounded";
-  src: url('/assets/fonts/Odin/OdinRounded_Bold.otf') format("truetype");
-  font-weight: $font-weight-bold;
-}
+// @font-face {
+//   font-family: "Odin Rounded";
+//   src: url('/assets/fonts/Odin/OdinRounded_Bold.otf') format("truetype");
+//   font-weight: $font-weight-bold;
+// }
 
-@font-face {
-  font-family: "Odin Rounded";
-  src: url('/assets/fonts/Odin/OdinRounded_Regular.otf') format("truetype");
-  font-weight: $font-weight-normal;
-}
+// @font-face {
+//   font-family: "Odin Rounded";
+//   src: url('/assets/fonts/Odin/OdinRounded_Regular.otf') format("truetype");
+//   font-weight: $font-weight-normal;
+// }
 
-@font-face {
-  font-family: "Odin Rounded";
-  src: url('/assets/fonts/Odin/OdinRounded_Light.otf') format("truetype");
-  font-weight: $font-weight-light;
-}
+// @font-face {
+//   font-family: "Odin Rounded";
+//   src: url('/assets/fonts/Odin/OdinRounded_Light.otf') format("truetype");
+//   font-weight: $font-weight-light;
+// }
 
-@font-face {
-  font-family: "Bariol";
-  src: url('/assets/fonts/Bariol/Bariol_Bold.otf') format("truetype");
-  font-weight: $font-weight-bold;
-}
+// @font-face {
+//   font-family: "Bariol";
+//   src: url('/assets/fonts/Bariol/Bariol_Bold.otf') format("truetype");
+//   font-weight: $font-weight-bold;
+// }
 
-@font-face {
-  font-family: "Bariol";
-  src: url('/assets/fonts/Bariol/Bariol_Regular.otf') format("truetype");
-  font-weight: $font-weight-normal;
-}
+// @font-face {
+//   font-family: "Bariol";
+//   src: url('/assets/fonts/Bariol/Bariol_Regular.otf') format("truetype");
+//   font-weight: $font-weight-normal;
+// }
 
-@font-face {
-  font-family: "Bariol";
-  src: url('/assets/fonts/Bariol/Bariol_Light.otf') format("truetype");
-  font-weight: $font-weight-light;
-}
+// @font-face {
+//   font-family: "Bariol";
+//   src: url('/assets/fonts/Bariol/Bariol_Light.otf') format("truetype");
+//   font-weight: $font-weight-light;
+// }
 
-// Font-family
-$header-font: "Odin Rounded", "Helvetica", "sans-serif";
-$base-font: "Bariol", "Helvetica", "sans-serif";
+// // Font-family
+// $header-font: "Odin Rounded", "Helvetica", "sans-serif";
+// $base-font: "Bariol", "Helvetica", "sans-serif";
 
 /* -------------------------------------
  * Colors
@@ -75,4 +75,4 @@ $gray-darker:  lighten(#000, 13.5%); // #222
 $gray-dark:    lighten(#000, 20%);   // #333
 $gray:         lighten(#000, 33.5%); // #555
 $gray-light:   lighten(#000, 46.7%); // #777
-$gray-lighter: lighten(#000, 93.5%); // #eee
+$gray-lighter: #fbfbfb; // #eee
