--- a/app/views/pages/_invite_fields.html.erb
+++ b/app/views/pages/_invite_fields.html.erb
@@ -1,4 +1,6 @@
 <div class="nested-fields">
-  <%= f.association :user, collection: User.all, label_method: ->(obj){ obj.email } %>
-  <%= link_to_remove_association "remove selection", f %>
+  <%= f.association :user, prompt: "invite a friend", label: false, collection: User.all, label_method: ->(obj){ obj.email } %>
+  <%= link_to_remove_association f do %>
+    <i class="fa fa-times"></i>
+  <% end %>
 </div>
