--- a/app/views/pages/_selection_fields.html.erb
+++ b/app/views/pages/_selection_fields.html.erb
@@ -1,4 +1,6 @@
 <div class="nested-fields">
-  <%= f.input :title %>
-  <%= link_to_remove_association "remove selection", f %>
+  <%= f.input :title, placeholder: "new outcome", label: false %>
+  <%= link_to_remove_association f do %>
+    <i class="fa fa-times"></i>
+  <% end %>
 </div>
