--- a/app/views/pages/_tabs.html.erb
+++ b/app/views/pages/_tabs.html.erb
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="form-group">
           <div class="col-xs-8" id="pool-stake">
-            <%= f.input :stake, required: false, input_html:{class:"my_input"}, label_html:{class:"pool-stake"}, wrapper_html:{class:"my_wrapper"}, placeholder: "For how much are we playing?" %>
+            <%= f.input :stake, required: false,  label_html:{class:"pool-stake"}, placeholder: "For how much are we playing?" %>
           </div>
         </div>
       </div>
