--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+  <div class="container">
   <div class="row ">
     <div class="col-xs-12">
       <div class="bet-description">
@@ -9,7 +9,7 @@
           <li><%=image_tag "Clock.png", class: "bet-icon"%><span id="pool-<%=@pool.id%>"></span></li>
         </ul>
         <hr>
-        <h4><%= @pool.description %></h4>
+        <h4 class="text-center"><%= @pool.description %></h4>
         <hr>
       </div>
     </div>
@@ -23,7 +23,8 @@
     <%= render 'confirm_winner' %>
     <% end %>
   </div>
-<%= render 'chatroom' %>
+  <div class="dynamic"><%= render 'chatroom' %></div>
+
 
 
 <!-- This is JS for the selections to be unclickable after countdown = 0 -->
