--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,39 +21,63 @@
   margin: 5px;
 }
 
-    ul.tabs{
-      margin: 0px;
-      padding: 0px;
-      list-style: none;
-      background-color: white;
-      display: flex;
+ul.tabs{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  background-color: white;
+  display: flex;
+}
+
+ul.tabs{
+  background-color: #EEEEEE;
+}
+
+    ul.pool-tabs {
+      background-color: #254C62;
+      border-radius: 5px;
     }
 
-    ul.tabs li{
-      background: white;
-      color: #222;
-      padding: 10px 15px;
-      cursor: pointer;
-      flex: 1 1 auto;
-      border-top-style: none;
-      border-right-style: solid;
-      border-bottom-style: none;
-      border-left-style: none;
-      border-color: $gray;
-      border-width: 2px;
+ul.tabs li{
+  background: white;
+  color: #222;
+  padding: 10px 15px;
+  cursor: pointer;
+  flex: 1 1 auto;
+  border-top-style: none;
+  border-right-style: solid;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-color: $gray;
+  border-width: 2px;
+
+}
+
+    ul.pool-tabs li{
+    border-radius: 5px;
+    width: 70px;
+    margin-left: 10px;
+    border-style: none;
+    padding: 0px;
+    margin: 5px;
+    text-align: center;
     }
 
-    ul.tabs li.current{
-      background: $lighter-blue;
-      color: #222;
-    }
+ul.tabs li.current{
+  background: $lighter-blue;
+  color: #222;
+}
 
-    .tab-content{
-      display: none;
-      background: $gray;
-      padding: 15px;
-      min-height: 280px;
-      position: relative;
+.tab-content{
+  display: none;
+  background: $gray;
+  padding: 15px;
+  min-height: 280px;
+  position: relative;
+}
+
+    .pool-tab-content{
+      background-color: #EEEEEE;
     }
 
 .tab-content.current {
@@ -78,4 +102,8 @@
 
 .new-pool {
   width: 100vw;
+}
+
+.separator-home {
+  height: 20px;
 }
