--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -121,7 +121,8 @@ ul.tabs{
     ul.pool-tabs {
       background-color: #254C62;
       border-radius: 5px;
-      
+    }
+
     ul.tabs{
       margin: 0px;
       padding: 0px;
@@ -164,7 +165,7 @@ ul.tabs li.current{
   background: $lighter-blue;
   color: #222;
 }
-      
+
 .tab-content{
   display: none;
   padding: 15px;
@@ -175,7 +176,8 @@ ul.tabs li.current{
 
     .pool-tab-content{
       background-color: #EEEEEE;
-    
+    }
+
 
 .tab-content.current {
   display: inherit;
