--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -23,7 +23,7 @@
     <%= render 'confirm_winner' %>
     <% end %>
   </div>
-  <div class="dynamic"><%= render 'chatroom' %></div>
+  <div class="dynamic"><%= render partial: 'chatroom' %></div>
 
 
 
