--- a/app/assets/stylesheets/pages/_pools_show.scss
+++ b/app/assets/stylesheets/pages/_pools_show.scss
@@ -47,6 +47,11 @@
   align-items: center;
   justify-content: space-around;
 
+
+  .pool-confirm_winner {
+    margin-top: 20px;
+  }
+
   h1 {
     margin: 0;
   }
