--- a/app/views/pools/_placebet.html.erb
+++ b/app/views/pools/_placebet.html.erb
@@ -12,25 +12,43 @@
 
         <div class="form-group">
           <input value="<%= @pool.id %>" type="hidden" name="bet[pool_id]">
-          <div class="bet-selections">
+          <div class="bet-selections" id="choose-winner">
             <% @pool.selections.each do |selection| %>
               <% if my_selection.include?(selection) %>
               <input class="hidden" type="radio" value="<%= selection.id%>" name="bet[selection_id]" id="bet_selection_id_<%=selection.id%>">
-              <label for="bet_selection_id_<%=selection.id%>" class="bet-selection active">
+              <label for="bet_selection_id_<%=selection.id%>" class="bet-selection active" data-selection="<%= selection.title %>">
               <%= selection.title %>
               </label>
               <% else %>
               <input class="hidden" type="radio" value="<%= selection.id%>" name="bet[selection_id]" id="bet_selection_id_<%=selection.id%>">
-              <label for="bet_selection_id_<%=selection.id%>" class="bet-selection">
+              <label for="bet_selection_id" class="bet-selection" data-selection="<%= selection.title %>">
               <%= selection.title %>
               </label>
               <% end %>
             <% end %>
           </div>
         </div>
-        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> $ bet" class="tn btn-lg btn-success confirmbutton" data-disable-with="Confirm your bet">
+        <div onclick="confirmBet()">
+        <input type="submit" name="commit" value="Confirm your <%= @pool.stake %> $ bet" class="tn btn-lg btn-success confirmbutton" id= "confirm-bet-choice" data-disable-with="Confirm your bet">
+        </div>
       </form>
       </div>
     </div>
   </div>
 </div>
+
+
+<%= content_for(:after_js) do %>
+<script>
+
+$('.bet-selection').click(function(){
+    alert('You are putting your money on ' + $(this).data('selection') + ' to win');
+});
+
+function confirmBet() {
+    confirm("Press OK to confirm your selection and place your bet!");
+}
+
+</script>
+<% end %>
+
