bet creation nice

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,68 +2,70 @@
 <div class="container">
   <div class="row text-center">
     <div class="col-xs-12">
-      <h3>Create your bet today!</h3>
+      <h3 class ="tagline">Start your own bet now!</h3>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12">
       <div class="banner-create">
         <%= simple_form_for(@pool) do |f| %>
-        <%= f.input :title, label: false,   required: false, input_html:{class:"bet-title"}, placeholder: "Give a title to your bet..." %>
+        <%= f.input :title, label: false, required: false, input_html:{class:"bet-title"}, placeholder: "Give a title to your bet..." %>
         <div class="fake-btn btn btn-primary">Start a bet</div>
         <div class="fake-div hidden">
           <div class="body-tabs">
             <ul class="tabs">
               <li class="tab-link current" data-tab="description">
-                <i class = "fa fa-comment icon"></i>
-                <p>terms</p>
+                <%=image_tag "warning.png", class:"bet_creation-icon"%>
+                <p>1. terms</p>
               </li>
-              <li class="tab-link" data-tab="selections"><i class = "fa fa-check icon">
-                </i>
-                <p>results</p>
+              <li class="tab-link" data-tab="selections"><%=image_tag "list.png", class:"bet_creation-icon"%>
+                <p>2. choices</p>
               </li>
-              <li class="tab-link" data-tab="stake"><i class = "fa fa-money icon icon-green">
-                </i>
-                <p>stake</p>
+              <li class="tab-link" data-tab="stake"><%=image_tag "Cash.png", class:"bet_creation-icon"%>
+                <p>3. stake</p>
               </li>
-              <li class="tab-link" data-tab="timer"><i class = "fa fa-clock-o">
-                </i>
-                <p>start</p>
+              <li class="tab-link" data-tab="timer"><%=image_tag "Clock.png", class:"bet_creation-icon"%>
+                <p>4. start</p>
               </li>
-              <li class="tab-link last-tab" data-tab="share"><i class = "fa fa-share icon">
-                </i>
-                <p>share</p>
+              <li class="tab-link last-tab" data-tab="share"><%=image_tag "Shape.png", class:"bet_creation-icon"%>
+                <p>5. share</p>
               </li>
             </ul>
+
             <div id="description" class="tab-content current">
               <%= f.input :description, label:false, input_html:{class:"description_input"}, placeholder: "What are the terms of the bet?" %>
             </div>
+
             <div id="selections" class="tab-content">
-              <%= f.simple_fields_for :selections do |ff| %>
-              <%= render 'selection_fields', f: ff %>
-              <% end %>
+                <%= f.simple_fields_for :selections do |ff| %>
+                <%= render 'selection_fields', f: ff %>
+                <% end %>
+
               <div class="links">
                 <%= link_to_add_association f, :selections do %>
                 <i class="fa fa-plus"></i>
                 <% end %>
               </div>
             </div>
+
             <div id="stake" class="tab-content">
               <div class="row">
                   <div class="col-xs-12">
-                    <%= f.input :stake, label:false, placeholder: "For how much are we playing?" %>
+                    <%= f.input :stake, label:false, placeholder: "For how much are we playing?", required: true %>
                   </div>
               </div>
             </div>
+
             <div id="timer" class="tab-content">
               <div class="row">
                 <div class="form-group">
                   <div class="col-xs-12" id="pool-stake">
-                    <%= f.input :end_date, as: :string, label: false, placeholder: "When does your event starts?" %>
+                    <%= f.input :end_date, as: :string, label: false, placeholder: "When does your event starts?", required: true %>
                   </div>
                 </div>
               </div>
             </div>
+
             <div id="share" class="tab-content">
               <%= f.simple_fields_for :invites do |ff| %>
               <%= render 'invite_fields', f: ff %>
@@ -78,7 +80,7 @@
           </div>
         </div>
         <div class="real-submit hidden">
-          <%= f.button :submit, class: 'btn btn-primary bold-text fake-btn' %>
+          <%= f.button :submit, disabled: true, class: 'btn btn-primary bold-text real-submit' %>
         </div>
         <% end %>
       </div>
@@ -93,6 +95,14 @@
 <script>
   $('#pool_end_date').datetimepicker({
     format: 'DD/MM/YYYY HH:mm'
+  })
+
+
+
+  $('form').click(function() {
+    if( $('#pool_title').val() != "" && $('#pool_description').val() != "" && $('#selections').find( ".nested-fields" ).length >= 2 && $('#pool_stake').val() != "" && $('#pool_end_date').val() != "" ) {
+      $('.real-submit').prop('disabled', false);
+    }
   })
 </script>
 <% end %>
