--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,6 +2,11 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.tagline {
+  color: $blue;
+  margin: 10px;
+  font-size: 25px;
+}
 
 .banner-create {
   border-radius: 3px;
@@ -40,9 +45,20 @@
   border-radius: 3px;
 }
 
+.real-submit {
+  width: 100%;
+  border-radius: 3px;
+}
+
 .fake-div {
   padding: 3px;
   width: 100%;
+}
+
+.steps{
+  position: absolute;
+  top: 3px;
+  left: 3px;
 }
 
 .icon {
@@ -51,7 +67,8 @@
 
 .nested-fields {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-around;
   padding: 0px 15px;
   align-items: center;
   align-content: center;
@@ -101,9 +118,9 @@
   align-items: center;
   justify-content: center;
   p {
-    font-size: 13px;
+    font-size: 10px;
     margin-top: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
     font-family: $base-font;
     color: $blue;
   }
@@ -114,46 +131,46 @@
   text-decoration: none;
 }
 
-    ul.tabs{
-      margin: 0px;
-      padding: 0px;
-      list-style: none;
-      background-color: none;
-      display: flex;
-    }
+ul.tabs{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  background-color: none;
+  display: flex;
+}
 
-    ul.tabs li{
-      background: white;
-      color: #222;
-      padding: 10px 10px;
-      cursor: pointer;
-      flex: 1 1 auto;
-      border-top-style: none;
-      border-right-style: solid;
-      border-bottom-style: none;
-      border-left-style: none;
-      border-color: $gray;
-      border-width: 1px;
-      &:first-child {
-        border-radius: 4px 0 0 4px;
-      }
-      &:last-child {
-        border-radius: 0 4px 4px 0;
-      }
-    }
+ul.tabs li{
+  background: white;
+  color: #222;
+  padding: 10px 10px;
+  cursor: pointer;
+  flex: 1 1 auto;
+  border-top-style: none;
+  border-right-style: solid;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-color: $gray;
+  border-width: 1px;
+  &:first-child {
+    border-radius: 4px 0 0 4px;
+  }
+  &:last-child {
+    border-radius: 0 4px 4px 0;
+  }
+}
 
-    ul.tabs li.current{
-      background: $lighter-blue;
-      color: #222;
-    }
+ul.tabs li.current{
+  background: $lighter-blue;
+  color: #222;
+}
 
-    .tab-content{
-      display: none;
-      padding: 15px;
-      min-height: 80px;
-      position: relative;
-      outline: none;
-    }
+.tab-content{
+  display: none;
+  padding: 15px;
+  min-height: 80px;
+  position: relative;
+  outline: none;
+}
 
 .tab-content.current {
   display: inherit;
@@ -185,3 +202,30 @@
   height: 37px !important;
 }
 
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 0px) and (max-width: 768px) {
+  .bet_creation-icon {
+    width: 20px;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .bet_creation-icon {
+    width: 30px;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .bet_creation-icon {
+    width: 40px;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .bet_creation-icon {
+    width: 50px;
+  }
+}
