--- a/app/views/pages/_selection_fields.html.erb
+++ b/app/views/pages/_selection_fields.html.erb
@@ -1,6 +1,7 @@
 <div class="nested-fields">
-  <%= f.input :title, placeholder: "new outcome", label: false %>
+  <%= f.input :title, placeholder: "new outcome", label: false, required: true %>
   <%= link_to_remove_association f do %>
     <i class="fa fa-times"></i>
   <% end %>
 </div>
+
