--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <div class="airbnblogo">
     <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <h3>BestBet</h3>
+    <h3><%= image_tag ("handshake.png") %></h3>
     <% end %>
   </div>
 
